# nobullfit-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  test_data.csv
.github/workflows/: release.yml
src/: main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
